# srpc

./: .bazelignore  .editorconfig  .gitignore  .gitmodules  .travis.yml  BUILD  CMakeLists.txt  CMakeLists_Headers.txt  CODE_OF_CONDUCT.md  GNUmakefile  README.md  README_cn.md  README_en.md  WORKSPACE  srpc-config.cmake.in  srpc.bzl
benchmark/: CMakeLists.txt  GNUmakefile  benchmark_pb.proto  benchmark_thrift.thrift  client.cc  client_cdf.cc  proxy.cc  server.cc  test.py  thrift_server.cc
docs/: docs-01-idl.md  docs-02-service.md  docs-03-server.md  docs-04-client.md  docs-05-context.md  docs-06-workflow.md  docs-07-http.md  docs-07-srpc-http.md  docs-08-tracing.md  docs-09-metrics.md  docs-10-http-with-modules.md  installation.md  rpc.md  tutorial-01-idl.md  tutorial-02-service.md  tutorial-03-server.md  tutorial-04-client.md  wiki.md  (+4 more)
src/: CMakeLists.txt  rpc_basic.cc  rpc_basic.h  rpc_buffer.cc  rpc_buffer.h  rpc_client.h  rpc_context.h  rpc_context.inl  rpc_define.h  rpc_global.cc  rpc_global.h  rpc_options.h  rpc_server.h  rpc_service.h  rpc_span.h  rpc_span_policies.cc  rpc_span_policies.h  rpc_task.inl  rpc_types.h  rpc_zero_copy_stream.h  sogou_rpc.h
src/compress/: CMakeLists.txt  rpc_compress.cc  rpc_compress.h  rpc_compress_gzip.h  rpc_compress_lz4.h  rpc_compress_snappy.cc  rpc_compress_snappy.h
src/generator/: CMakeLists.txt  compiler.cc  descriptor.h  generator.cc  generator.h  parser.cc  parser.h  printer.h
src/http/: CMakeLists.txt  http_client.cc  http_client.h  http_module.cc  http_module.h  http_server.cc  http_server.h  http_task.cc  http_task.h
src/include/srpc/: ckms_quantiles.h  descriptor.h  generator.h  parser.h  printer.h  rpc_basic.h  rpc_buffer.h  rpc_client.h  rpc_compress.h  rpc_compress_gzip.h  rpc_compress_lz4.h  rpc_compress_snappy.h  rpc_context.h  rpc_context.inl  rpc_define.h  rpc_filter.h  rpc_filter_metrics.h  rpc_global.h  rpc_message.h  rpc_message_brpc.h  rpc_message_srpc.h  rpc_message_thrift.h  rpc_message_trpc.h  rpc_metrics_filter.h  rpc_metrics_module.h  rpc_module.h  rpc_module_metrics.h  rpc_module_span.h  rpc_options.h  rpc_server.h  rpc_service.h  rpc_span_policies.h  rpc_task.inl  rpc_thrift_buffer.h  rpc_thrift_enum.h  rpc_thrift_idl.h  rpc_thrift_idl.inl  rpc_trace_filter.h  rpc_trace_module.h  rpc_types.h  (+3 more)
src/message/: CMakeLists.txt  rpc_message.h  rpc_message_brpc.cc  rpc_message_brpc.h  rpc_message_srpc.cc  rpc_message_srpc.h  rpc_message_thrift.cc  rpc_message_thrift.h  rpc_message_trpc.cc  rpc_message_trpc.h  rpc_meta.proto  rpc_meta_brpc.proto  rpc_meta_trpc.proto  rpc_span.proto
src/module/: CMakeLists.txt  opentelemetry_common.proto  opentelemetry_trace.proto  opentelemetry_trace_service.proto  resource.proto  rpc_filter.h  rpc_filter_metrics.cc  rpc_filter_metrics.h  rpc_filter_metrics.inl  rpc_filter_span.cc  rpc_filter_span.h  rpc_metrics_filter.cc  rpc_metrics_filter.h  rpc_metrics_module.cc  rpc_metrics_module.h  rpc_module.cc  rpc_module.h  rpc_module_impl.h  rpc_module_metrics.h  rpc_module_span.h  rpc_span.h  rpc_span_policies.cc  rpc_span_policies.h  rpc_trace_filter.cc  rpc_trace_filter.h  rpc_trace_module.cc  rpc_trace_module.h  trace.proto  trace_service.proto
src/module/proto/: opentelemetry_common.proto  opentelemetry_metrics.proto  opentelemetry_metrics_service.proto  opentelemetry_resource.proto  opentelemetry_trace.proto
src/thrift/: CMakeLists.txt  rpc_thrift_buffer.cc  rpc_thrift_buffer.h  rpc_thrift_enum.h  rpc_thrift_idl.cc  rpc_thrift_idl.h  rpc_thrift_idl.inl
src/var/: CMakeLists.txt  ckms_quantiles.h  rpc_var.cc  rpc_var.h  rpc_var.inl  rpc_var_factory.cc  rpc_var_factory.h  time_window_quantiles.h
test/: CMakeLists.txt  GNUmakefile  test_pb.proto  test_thrift.thrift  unittest.cc  var_unittest.cc
tools/: CMakeLists.txt  GNUmakefile  README.md  README_cn.md  README_en.md  srpc_basic_controller.cc  srpc_config.cc  srpc_config.h  srpc_controller.cc  srpc_controller.h  srpc_ctl.cc  srpc_proxy_controller.cc  srpc_rpc_controller.cc  test_case.txt
tools/template/common/: CMakeLists.txt  GNUmakefile  config.json  util.h
tools/template/config/: Json.cc  Json.h  config_full.cc  config_simple.cc  config_simple.h
tools/template/http/: CMakeLists.txt  client_main.cc  config.json  server_example.h  server_main.cc
tools/template/proxy/: CMakeLists.txt  client_main.cc  proxy_main.cc  proxy_main_proto.cc  server_main.cc
tools/template/rpc/: CMakeLists.txt  client_protobuf.cc  client_thrift.cc  server_protobuf.cc  server_thrift.cc
tools/templates/basic/: client.conf  client_main.cc  compute_server_main.cc  server.conf  server_main.cc
tools/templates/common/: CMakeLists.txt  GNUmakefile  config.json  util.h
tools/templates/config/: Json.cc  Json.h  config_full.cc  config_full.h  config_simple.cc  config_simple.h
tools/templates/file/: 404.html  50x.html  file_service.cc  file_service.h  index.html  server.conf  server_main.cc
tools/templates/proxy/: client_rpc.conf  proxy.conf  proxy_main.cc  proxy_main_proto.cc
tools/templates/rpc/: CMakeLists.txt  client.conf  client_protobuf.cc  client_thrift.cc  rpc.proto  rpc.thrift  server.conf  server_protobuf.cc  server_thrift.cc
tools/test_proto/: basic.proto  root.proto
tools/util/: Json.cc  Json.h
tutorial/: CMakeLists.txt  GNUmakefile  echo_pb.proto  echo_thrift.thrift  helloworld.proto  test_module.h  tutorial-01-srpc_pb_server.cc  tutorial-02-srpc_pb_client.cc  tutorial-03-srpc_thrift_server.cc  tutorial-04-srpc_thrift_client.cc  tutorial-05-brpc_pb_server.cc  tutorial-06-brpc_pb_client.cc  tutorial-07-thrift_thrift_server.cc  tutorial-08-thrift_thrift_client.cc  tutorial-09-client_task.cc  tutorial-10-server_async.cc  tutorial-11-trpc_pb_server.cc  tutorial-12-trpc_pb_client.cc  tutorial-13-srpc_http_server.cc  tutorial-13-trpc_http_server.cc  tutorial-14-trpc_http_client.cc  tutorial-15-srpc_pb_proxy.cc  tutorial-15-trpc_http_client.cc  tutorial-16-server_with_filter.cc  tutorial-16-server_with_metrics.cc  tutorial-17-http_server.cc  tutorial-18-http_client.cc  tutorial-19-custom_filter.cc  tutorial-20-trans_coding.cc
(+27 files in other folders)
